src/_includes/css/style.css
/* ... */
#post-content {
    margin-bottom: 6rem;
    overflow-x: hidden;
}

#post-content .main-content {
    margin-left: auto;
    margin-right: auto;
    max-width: 90ch;
}

#main-contact {
    max-width: 1150px;
    padding: 0 1rem;
    margin: 2rem auto;
    padding-bottom: 1.5rem;
    overflow: hidden;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
}

#main-contact .right-sidebar {
    margin-left: auto;
    margin-top: 5rem;
    max-width: 25ch;
    padding-right: 1rem;
    grid-column: 5 / 7;
}

.contact-form {
    display: flex;
    flex-direction: column;
    max-width: 60ch;
}

.contact-form label:not(label:first-child) {
    margin-top: .5rem;
}

.contact-form input {
    height: 2.5rem;
}

.contact-form input, .contact-form textarea {
    margin: .2rem 0;
    border: .1rem solid lightgray;
    padding: .5rem;
    border-radius: .15rem;
}

.contact-form textarea {
    resize: vertical;
}

.contact-form button {
    margin-top: 1.5rem;
    max-width: 16ch;
}

.main-container .main-content .my-posts {
    padding-left: 0;
    margin: 0;
    list-style: none;
}

.main-container .main-content .my-posts article {
    padding-top: .5rem;
    padding-bottom: 1.25rem;
}

.main-container .main-content .my-posts h2 a {
    text-decoration: underline;
}

.main-container .main-content .my-posts h2 a:hover {
    text-decoration: none;
}

.main-container .main-content {
    max-width: 1150px;
}

.main-content .post-header {
    grid-column: 1 / 6;
}

.wrap {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    margin: 2rem auto 1rem auto;
    max-width: 1150px;
    padding: 0 1rem;
}

.wrap .banner-container {
    flex-direction: column;
    grid-column: 1 / 7;
    align-items: flex-start;
    margin: 0;
}

.wrap .result,
.wrap .main-content {
    grid-column: 1 / 7;
}

main-container .main-content .about-banner {
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-container .main-content .writing-about {
    padding-bottom: 2rem;
}

.main-container .main-content .about-banner .about-headshot {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 1rem;
    margin-right: 1rem;
    margin-bottom: 3rem;
    border-radius: 50%;
    max-width: 100%;
    transform-origin: 60% 50%;
    height: 200px;
    width: 200px;
}

.main-container .projects .projects-wrapper {
    max-width: 1150px;
    display: flex;
    flex-direction: column;
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    margin-left: auto;
    margin-right: auto;
}

.main-container .projects .project-grid {
    display: grid;
    padding: 1rem 0.1rem;
    grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
    gap: 1.5rem;
    overflow: hidden;
    list-style: none;
}

.main-container .projects .project-grid .project-tile {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    border: .065rem solid lightgray;
    overflow: hidden;
    max-width: 100%;
    width: 100%;
    margin-bottom: 1rem;
    border-radius: .4rem;
    transform-origin: 50% 50%;
    /* box-shadow: 0px 2px 3px 0px rgb(201, 202, 202); */
}

.main-container .projects .project-tile picture {
    height: 100%;
    width: 100%;
}

.main-container .projects .project-tile picture img {
    max-width: 100%;
    overflow: hidden;
    object-fit: fill;
    height: 100%;
    width: 100%;
}

.main-container .projects .project-tile .project-details {
    padding: .75rem 1rem;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    background: #fff;
}

.main-container .projects .project-tile .project-details .links {
    margin-top: auto;
    margin-bottom: 1rem;
    padding-left: 0;
    list-style: none;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.main-container .projects .project-tile .project-details .project-desc {
    margin-bottom: 1.75rem;
}

.main-container .projects .project-tile .project-details .links .tile-link {
    padding: .5rem;
    border-radius: .15rem;
    text-decoration: none;
    color: #444;
    border: .05rem solid lightgray;
    background: inherit;
    font-size: .9rem;
    margin-right: .75rem;
}

.main-container .projects .project-tile .project-details .links .tile-link:hover,
.main-container .projects .project-tile .project-details .links .tile-link:focus  {
    cursor: pointer;
    color: #222;
    border: .05rem solid transparent;
    background: hsl(0, 0%, 23%);
    color: #fff;
}

.splat {
    background: rgb(37, 42, 65);
    background: rgb(17, 21, 34);
}

.main-container .projects .project-tile .project-details h3 {
    margin-top: 0rem;
    margin-bottom: 0;
}

.main-container .projects .project-tile .project-details h3 a {
    text-decoration: none;
}

.main-container .projects .project-tile .project-details h3 a:hover {
    text-decoration: underline;
}

.main-container .projects .project-tile .project-details .project-link {
    display: block;
    position: relative;
    margin-top: .5rem;
    margin-bottom: .5rem;
}

.main-container .projects .project-tile .project-link a {
    padding-left: 1.5rem;
}

.tt {
    padding: .75rem 1rem;
    color: #fff;
    background: inherit;
    border: .1rem solid #eee;
}

.reach-me.button {
    text-decoration: none;
    color: #212121;
    background: #fff;
    border: 2px solid #272643;
    border: 2px solid rgb(25, 32, 36);
    padding: .9rem 1.35rem;
    font-size: 1rem;
    transition: box-shadow 100ms ease-in-out, background 200ms ease-in-out, color 200ms ease-in;
    box-shadow: 4px 4px 0px 0px rgb(25, 32, 36);
    border-radius: .1rem;
    font-weight: 500;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}
/* ... */

